--- a/package.json
+++ b/package.json
@@ -62,13 +62,6 @@
     "css-loader": "^0.26.0",
     "editorconfig-tools": "^0.1.1",
     "enzyme": "^2.6.0",
-    "eslint": "^3.10.2",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-css-modules": "^1.0.9",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.7.1",
     "extend": "^3.0.0",
     "file-loader": "^0.9.0",
     "front-matter": "^2.1.1",
@@ -112,6 +105,15 @@
     "webpack": "^1.13.3",
     "webpack-hot-middleware": "^2.13.2",
     "webpack-middleware": "^1.5.1"
+  },
+  "optionalDependencies" : {
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-css-modules": "^1.0.9",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.7.1"
   },
   "babel": {
     "presets": [
