--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "isomorphic-style-loader": "^1.1.0",
     "jsonwebtoken": "^7.2.1",
     "node-fetch": "^1.6.3",
+    "nodemailer": "^3.1.3",
     "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
